--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   shared_preferences: ^0.5.8
   contacts_service: ^0.3.10
   permission_handler: ^5.0.1+1
-
+  equatable: ^1.2.5
+  bloc: ^6.0.3
 
 
 dev_dependencies:
