--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite:
+  path:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -41,8 +42,6 @@ dependencies:
   contacts_service: ^0.3.10
   permission_handler: ^5.0.1+1
   equatable: ^1.2.5
-  bloc: ^6.0.3
-
 
 dev_dependencies:
   flutter_test:
