--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,24 +24,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  image_picker: any
-  provider: any
-  rxdart: any
-  font_awesome_flutter: any
-  community_material_icon: any
-  http: any
-  async_loader: any
-  flutter_facebook_login: ^1.2.0
-  firebase_database: any
-  firebase_auth: ^0.16.1
-  toast: any
-  firebase_core: any
-  cloud_firestore: any
-  firebase_storage: any
+  image_picker: ^0.6.7+12
+  provider: ^4.3.2+2
+  community_material_icon: ^5.4.55
+  firebase_database: ^4.1.1
+  firebase_auth: ^0.18.1+2
+  toast: ^0.1.5
+  firebase_core: ^0.5.0+1
+  cloud_firestore: ^0.14.1+3
+  firebase_storage: ^4.0.1
   shared_preferences: ^0.5.8
   contacts_service: ^0.3.10
   permission_handler: ^5.0.1+1
-  equatable: ^1.2.5
 
 dev_dependencies:
   flutter_test:
