--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: ^0.5.8
   contacts_service: ^0.3.10
   permission_handler: ^5.0.1+1
+  firebase_messaging: ^8.0.0-dev.8
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
